Fix active chat visibility

--- a/src/ui/views/session/overlay/Overlay.css
+++ b/src/ui/views/session/overlay/Overlay.css
@@ -17,5 +17,6 @@
 }
 
 .Overlay__content {
-  padding: 0 var(--sp-xs);
+  margin: 0 var(--sp-xs);
+  position: relative;
 }
